linked router link to login form

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -17,5 +17,5 @@
       >Incorrect Password</span
     >
   </div>
-  <button class="button">Login</button><br /><br />
+  <button class="button" routerLink="/admin">Login</button><br /><br />
 </form>
