--- a/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
+++ b/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form>
-      <h2>Add Employee Holiday Request</h2>
+      <h2>Update Employee Holiday Request</h2>
       <label>Employee ID</label> <br />
       <input type="text" /> <br />
       <br />
