--- a/src/app/modules/admin/components/form/update-forms/update-holiday/update-holiday.component.html
+++ b/src/app/modules/admin/components/form/update-forms/update-holiday/update-holiday.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form>
-        <h2>Add Holiday</h2>
+        <h2>Update Holiday</h2>
         <label for="date">Date</label> <br/>
         <input type="date"> <br/> <br/>
         <label for="date">Reason</label> <br/>
