--- a/src/app/modules/admin/components/form/add-forms/add-holiday/add-holiday.component.html
+++ b/src/app/modules/admin/components/form/add-forms/add-holiday/add-holiday.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-  <form>
+  <form [formGroup]="addHolidayForm" >
     <h2>Add Holiday</h2>
     <label for="date">Date</label> <br />
-    <input type="date" /> <br />
+    <input type="date" formControlName = 'date' /> <br />
     <br />
     <label for="date">Reason</label> <br />
-    <input type="text" /> <br />
+    <input type="text" formControlName = 'reason' /> <br />
     <br />
+
+    <input type="submit" (click)="onSubmit()">
   </form>
 </div>
