--- a/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
+++ b/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
@@ -1,31 +1,31 @@
 <div class="container">
-    <form>
-      <h2>Update Employee Holiday Request</h2>
-      <label>Employee ID</label> <br />
-      <input type="text" /> <br />
-      <br />
-      <label>Employee Name</label> <br />
-      <input type="text" /> <br />
-      <br />
-      <label for="cars">Department:</label>
-      <select id="cars" name="cars">
-        <option value="volvo">Enginner</option>
-        <option value="saab">Managment</option>
-        <option value="fiat">Advertising</option>
-        <option value="audi">Designing</option></select
-      ><br />
-      <br />
-      <label>Date</label> <br />
-      <input type="date" /> <br />
-      <br />
-      <label>Reason</label> <br />
-      <input type="text" />
-      <select id="cars" name="cars">
-        <option value="volvo">Approved</option>
-        <option value="saab">Reject</option></select
-      ><br />
-      <br />
-      <input type="submit">
-    </form>
-  </div>
-  
+  <form [formGroup]="updateHolidayRequestForm" >
+    <h2>Update Employee Holiday Request</h2>
+    <label>Employee ID</label> <br />
+    <input type="text" formControlName = 'employeeID' /> <br />
+    <br />
+    <label>Employee Name</label> <br />
+    <input type="text" formControlName = 'employeeName' /> <br />
+    <br />
+    <label for="cars">Department:</label>
+    <label for="department">Department:</label>
+    <select id="departmentName" name="departmentName" formControlName = "department">
+      <option value="Enginner">Enginner</option>
+      <option value="Managment">Managment</option>
+      <option value="Advertising">Advertising</option>
+      <option value="Designing">Designing</option></select
+    ><br />
+    <br />
+    <label>Date</label> <br />
+    <input type="date"  formControlName = 'date'/> <br />
+    <br />
+    <label>Reason</label> <br />
+    <input type="text" formControlName = "reason" />
+    <select id="decison" name="decison" formControlName = 'decison'>
+      <option value="Approved">Approved</option>
+      <option value="Reject">Reject</option></select
+    ><br />
+    <br />
+    <input type="submit" (click)="onSubmit()" >
+  </form>
+</div>
