--- a/src/app/modules/employee/components/emp-forms/profile-upate/profile-upate.component.html
+++ b/src/app/modules/employee/components/emp-forms/profile-upate/profile-upate.component.html
@@ -1,23 +1,23 @@
 <div class="container">
     <h2>Update Personal Deatils</h2>
-    <form >
+    <form [formGroup] = "profileUpdateForm">
         <label for="Employee ID">Employee ID</label><br>
-        <input type="text"> <br><br>
+        <input type="text" formControlName = "employeeID" /> <br><br>
 
         <label for="Employee Name">Employee Name</label><br>
-        <input type="text"> <br><br>
+        <input type="text" formControlName = "employeeName" /> <br><br>
 
         <label for="Email"> Email</label><br>
-        <input type="email"> <br><br>
+        <input type="email" formControlName = "email" /> <br><br>
 
         <label for="Contact">Contact</label><br>
-        <input type="text"> <br><br>
+        <input type="text" formControlName = "contact" /> <br><br>
 
         <label for="Password">Password</label><br>
-        <input type="password"> <br><br>
+        <input type="password" formControlName = "password" /> <br><br>
 
         <label for="Re-eneter">Re-enete password</label><br>
-        <input type="password"> <br><br>
-        <input type="submit">
+        <input type="password" formControlName = "confirmPassword" /> <br><br>
+        <input type="submit" (click)="onSubmit()" >
     </form>
 </div>
