--- a/src/app/modules/employee/components/emp-forms/update-holiday-request/update-holiday-request.component.scss
+++ b/src/app/modules/employee/components/emp-forms/update-holiday-request/update-holiday-request.component.scss
@@ -10,3 +10,12 @@
     margin-top: 20px;
  }
  
+ .error-messege {
+    font-family: "montserrat-regular" !important;
+    font-size: 0.7rem;
+    display: block;
+    color: red;
+    text-align: left;
+    width: 100%;
+
+}
