--- a/src/app/modules/admin/components/form/add-forms/add-holiday-request/add-holiday-request.component.scss
+++ b/src/app/modules/admin/components/form/add-forms/add-holiday-request/add-holiday-request.component.scss
@@ -9,3 +9,13 @@
     border-radius: 3px;
     margin-top: 20px;
 }
+
+.error-messege {
+    font-family: "montserrat-regular" !important;
+    font-size: 0.7rem;
+    display: block;
+    color: red;
+    text-align: left;
+    width: 100%;
+    ;
+}
