--- a/src/app/modules/employee/components/emp-forms/update-holiday-request/update-holiday-request.component.html
+++ b/src/app/modules/employee/components/emp-forms/update-holiday-request/update-holiday-request.component.html
@@ -1,31 +1,51 @@
 <div class="container">
-  <form [formGroup]="updateHolidayRequestForm" >
-    <h2>Add Holiday Request</h2>
+  <form [formGroup]="updateHolidayRequestForm" (ngSubmit)="onSubmit()">
+    <h2>Update Holiday Request</h2>
     <label>Employee ID</label> <br />
-    <input type="text" formControlName = 'employeeID' /> <br />
+    <input type="text" formControlName='employeeID' />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['employeeID'].hasError('required') &&
+    updateHolidayRequestForm.controls['employeeID'].dirty
+    ">Enter Email ID</span> <br />
     <br />
     <label>Employee Name</label> <br />
-    <input type="text" formControlName = 'employeeName' /> <br />
+    <input type="text" formControlName='employeeName' />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['employeeName'].hasError('required') &&
+    updateHolidayRequestForm.controls['employeeName'].dirty
+    ">Enter Email ID</span> <br />
     <br />
     <label for="cars">Department:</label>
     <label for="department">Department:</label>
-    <select id="departmentName" name="departmentName" formControlName = "department">
+    <select id="departmentName" name="departmentName" formControlName="department">
       <option value="Enginner">Enginner</option>
       <option value="Managment">Managment</option>
       <option value="Advertising">Advertising</option>
-      <option value="Designing">Designing</option></select
-    ><br />
+      <option value="Designing">Designing</option>
+    </select> <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['department'].hasError('required') &&
+    updateHolidayRequestForm.controls['department'].dirty
+    ">Enter Email ID</span>
+    <br />
     <br />
     <label>Date</label> <br />
-    <input type="date"  formControlName = 'date'/> <br />
+    <input type="date" formControlName='date' />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['date'].hasError('required') &&
+    updateHolidayRequestForm.controls['date'].dirty
+    ">Enter Date</span> <br />
     <br />
     <label>Reason</label> <br />
-    <input type="text" formControlName = "reason" />
-    <select id="decison" name="decison" formControlName = 'decison'>
+    <input type="text" formControlName="reason" />
+    <select id="decison" name="decison" formControlName='decison'>
       <option value="Approved">Approved</option>
-      <option value="Reject">Reject</option></select
-    ><br />
+      <option value="Reject">Reject</option>
+    </select>
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['decison'].hasError('required') &&
+    updateHolidayRequestForm.controls['decison'].dirty
+    ">Make your decision</span><br />
     <br />
-    <input type="submit" (click)="onSubmit()" >
+    <input type="submit" >
   </form>
 </div>
