--- a/src/app/modules/admin/components/form/add-forms/add-employee/add-employee.component.html
+++ b/src/app/modules/admin/components/form/add-forms/add-employee/add-employee.component.html
@@ -1,38 +1,79 @@
 <div class="container">
   <h2>Add Employee</h2>
-  <form [formGroup]="addEmployee">
+  <form [formGroup]="addEmployee" (ngSubmit)="onSubmit()" >
     <label>Employee ID</label>
-    <input type="text" formControlName = "employeeID" />
+    <input type="text" formControlName="employeeID" />
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['employeeID'].hasError('required') &&
+    addEmployee.controls['employeeID'].dirty
+      ">Enter Employee ID</span>
     <br />
     <br />
     <label>Name</label>
-    <input type="text"  formControlName = "employeeName"/>
+    <input type="text" formControlName="employeeName" />
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['employeeName'].hasError('required') &&
+    addEmployee.controls['employeeName'].dirty
+      ">Enter Employee Name</span>
     <br />
     <br />
     <label>Email</label>
-    <input type="text" formControlName = "email" /> <br />
+    <input type="text" formControlName="email" />
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['email'].hasError('required') &&
+    addEmployee.controls['email'].dirty
+      ">Enter email</span>
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['email'].invalid &&
+    addEmployee.controls['email'].touched &&
+    addEmployee.controls['email'].hasError('email')
+      ">Invalid Email ID</span>
     <br />
-    <label>Contact</label> 
-    <input type="text" formControlName = "contact" /> <br />
+    <br />
+    <label>Contact</label>
+    <input type="text" formControlName="contact" /> 
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['contact'].hasError('required') &&
+    addEmployee.controls['contact'].dirty
+      ">Enter Contact Number</span> <br />
     <br />
     <label for="department">Department:</label>
-    <select id="departmentName" name="departmentName" formControlName = "department">
+    <select id="departmentName" name="departmentName" formControlName="department">
       <option value="Enginner">Enginner</option>
       <option value="Managment">Managment</option>
       <option value="Advertising">Advertising</option>
-      <option value="Designing">Designing</option></select
-    ><br />
+      <option value="Designing">Designing</option>
+    </select>
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['department'].hasError('required') &&
+    addEmployee.controls['department'].dirty
+      ">Enter Department formControlName</span> 
+    <br />
     <br />
     <label for="user">User Type:</label>
-    <select id="userType" name="userType" formControlName = "userType" >
+    <select id="userType" name="userType" formControlName="userType">
       <option value="admin">Admin</option>
       <option value="employee">Employee</option>
     </select>
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['userType'].hasError('required') &&
+    addEmployee.controls['userType'].dirty
+      ">Enter User Type</span> 
     <br /><br />
     <label>Create Password</label>
-    <input type="password"  formControlName = "createPass"/> <br /><br />
+    <input type="password" formControlName="createPass" />
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['createPass'].hasError('required') &&
+    addEmployee.controls['createPass'].dirty
+      ">Enter Password</span>  <br /><br />
+
     <label>Re-eneter Password</label>
-    <input type="password" formControlName = "confirmPass" /> <br /><br />
-    <input type="submit" (click)="onSubmit()">
+    <input type="password" formControlName="confirmPass" />
+    <span class="error-messege" *ngIf="
+    addEmployee.controls['confirmPass'].hasError('required') &&
+    addEmployee.controls['confirmPass'].dirty
+      ">Re-enter Password</span> 
+     <br /><br />
+    <input type="submit" >
   </form>
 </div>
