--- a/src/app/modules/admin/components/form/update-forms/update-department/update-department.component.html
+++ b/src/app/modules/admin/components/form/update-forms/update-department/update-department.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2>Update Department</h2>
-    <form [formGroup]="updateDepartmentForm">
+    <form [formGroup]="updateDepartmentForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="departmentName">Department ID</label>
         <input
@@ -9,7 +9,10 @@
           id="departmentName"
           placeholder="Enter Department ID"
           formControlName="departmentID"
-        /> <br> <br>
+        /> <span class="error-messege" *ngIf="
+        updateDepartmentForm.controls['departmentID'].hasError('required') &&
+        updateDepartmentForm.controls['departmentID'].dirty
+          ">Enter department ID</span> <br> <br>
         <label for="departmentName">Department Name</label>
         <input
           type="text"
@@ -17,9 +20,12 @@
           id="departmentName"
           placeholder="Enter Department Name"
           formControlName = "departmentName"
-        /> <br><br>
+        /> <span class="error-messege" *ngIf="
+        updateDepartmentForm.controls['departmentName'].hasError('required') &&
+        updateDepartmentForm.controls['departmentName'].dirty
+          ">Enter department Name </span><br><br>
       </div>
-      <button style="align-items: center;" type="submit" class="btn btn-primary" (click)="onSubmit()" >Submit</button>
+      <button style="align-items: center;" type="submit" class="btn btn-primary"  >Submit</button>
     </form>
   </div>
   
