--- a/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
+++ b/src/app/modules/admin/components/form/update-forms/update-holiday-request/update-holiday-request.component.html
@@ -1,11 +1,19 @@
 <div class="container">
-  <form [formGroup]="updateHolidayRequestForm" >
+  <form [formGroup]="updateHolidayRequestForm" (ngSubmit)="onSubmit()" >
     <h2>Update Employee Holiday Request</h2>
     <label>Employee ID</label> <br />
-    <input type="text" formControlName = 'employeeID' /> <br />
+    <input type="text" formControlName = 'employeeID' />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['employeeID'].hasError('required') &&
+    updateHolidayRequestForm.controls['employeeID'].dirty
+          ">Enter employee ID </span> <br />
     <br />
     <label>Employee Name</label> <br />
-    <input type="text" formControlName = 'employeeName' /> <br />
+    <input type="text" formControlName = 'employeeName' />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['employeeName'].hasError('required') &&
+    updateHolidayRequestForm.controls['employeeName'].dirty
+          ">Enter employee Name </span>  <br />
     <br />
     <label for="cars">Department:</label>
     <label for="department">Department:</label>
@@ -14,18 +22,34 @@
       <option value="Managment">Managment</option>
       <option value="Advertising">Advertising</option>
       <option value="Designing">Designing</option></select
-    ><br />
+    >
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['department'].hasError('required') &&
+    updateHolidayRequestForm.controls['department'].dirty
+          ">Enter department</span> <br />
     <br />
     <label>Date</label> <br />
-    <input type="date"  formControlName = 'date'/> <br />
+    <input type="date"  formControlName = 'date'/>
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['date'].hasError('required') &&
+    updateHolidayRequestForm.controls['date'].dirty
+          ">Enter date </span>  <br />
     <br />
     <label>Reason</label> <br />
     <input type="text" formControlName = "reason" />
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['reason'].hasError('required') &&
+    updateHolidayRequestForm.controls['reason'].dirty
+          ">Enter Your Reason </span> 
     <select id="decison" name="decison" formControlName = 'decison'>
       <option value="Approved">Approved</option>
       <option value="Reject">Reject</option></select
-    ><br />
+    >
+    <span class="error-messege" *ngIf="
+    updateHolidayRequestForm.controls['decison'].hasError('required') &&
+    updateHolidayRequestForm.controls['decison'].dirty
+          ">Select your decison </span> <br />
     <br />
-    <input type="submit" (click)="onSubmit()" >
+    <input type="submit"  >
   </form>
 </div>
